# audio

./: .env.example  .gitignore  Caddyfile  awsec2.pem  build-and-push.sh  docker-compose.yml  implement.todo  manual-deploy.sh  traefik.yml
admin/: package.json
adminBackend/: ADMIN_API.md  Dockerfile  README.md  openapi-spec.json  package.json  scratch_check_names.ts  scratch_list_artists_debug.ts  vitest.config.ts
adminBackend/scratch/: inspect-zod.ts  test_deletion.ts  update_db_constraint.ts  verify-spec.ts
adminBackend/src/: index.ts
adminBackend/tests/: setup.ts
adminFrontend/: Dockerfile  package.json
audioAdminFrontend/: package.json
audioBackend/: .gitignore  AUDIO_API.md  Dockerfile  README.md  debug-db.ts  init_recombee.ts  inspect-schema.ts  package.json  rename_tables.ts  scratch.ts  scratch_debug_db.ts  test-insert.ts  test-valid-sig.ts  test_algolia.ts  test_auth.js  test_recombee.ts  test_results.txt  test_s3_upload.ts  typescript_errors.txt  vitest.config.ts
audioBackend/scratch/: debug-delete.ts  realign_recombee.ts  reclean_recombee.ts  sync_recombee.ts  test_db_match.ts
audioFeatureExtraction/: Dockerfile  main.py  pyproject.toml
audioFrontend/: Dockerfile  next.config.ts  package.json
audioMobileApp/: app.json  package.json  tsconfig.json
audioProcessing/: Dockerfile  README.md  package.json
example/: package.json
extractFeature/: main.py  pyproject.toml
extractFeature/temp/: Guzarish - Trending Version (Lyrics)   Aamir Khan   Asin   Ghajini   A.R. Rahman   Javed A, Sonu N.m4a.f015e8FD
frontend/: package.json
(+612 files in other folders)
