[project]
name = "extractfeature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=15.5.0",
    "boto3>=1.40.61",
    "essentia>=2.1b6.dev1389",
    "fastapi>=0.125.0",
    "numpy>=2.2.6",
    "uvicorn>=0.44.0",
]
